--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "aphrodite": "^2.4.0",
     "bootstrap": "^4.4.1",
     "multer": "^1.4.2",
     "react": "^16.12.0",
@@ -18,7 +19,9 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "reactstrap": "^8.4.0"
+    "react-svg-line-chart": "^2.0.2",
+    "reactstrap": "^8.4.0",
+    "simple-flexbox": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
