--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "aphrodite": "^2.4.0",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "multer": "^1.4.2",
     "react": "^16.12.0",
