--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.4.1",
     "multer": "^1.4.2",
     "react": "^16.12.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^16.12.0",
     "react-login-modal-sm": "^1.0.8",
     "react-modal-login": "^1.4.5",
@@ -23,7 +24,9 @@
     "react-svg-line-chart": "^2.0.2",
     "react-toastify": "^5.5.0",
     "reactstrap": "^8.4.0",
-    "simple-flexbox": "^2.3.0"
+    "simple-flexbox": "^2.3.0",
+    "sweetalert2": "^9.8.2",
+    "sweetalert2-react-content": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
