--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "padhlo",
   "version": "0.1.0",
+  "homepage": "http://padhlo.com/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
@@ -13,7 +14,10 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "multer": "^1.4.2",
+    "normalize.css": "^8.0.1",
     "react": "^16.12.0",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-animated-slider": "^2.0.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^16.12.0",
     "react-login-modal-sm": "^1.0.8",
