--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.4.1",
     "multer": "^1.4.2",
     "normalize.css": "^8.0.1",
+    "pm2": "^4.2.3",
     "react": "^16.12.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-animated-slider": "^2.0.0",
@@ -33,7 +34,7 @@
     "sweetalert2-react-content": "^3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "pm2 start ./node_modules/react-scripts/scripts/start.js --name padhlo",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
